@@ -1,0 +1,5 @@
+@comment $NetBSD: PLIST,v 1.1 2014/05/10 16:38:03 manu Exp $
+sbin/xen_network.py
+share/examples/rc.d/xen_network
+sbin/openstack_init.py
+share/examples/rc.d/openstack_init
